crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@159.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank(' a:1 sa:2C d g'::tsvector, 'a | s:*');"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    FuncCall@7..52
      Ident@7..14 "ts_rank"
      Ascii40@14..15 "("
      TypeCast@15..41
        AConst@15..31
          Sconst@15..31 "' a:1 sa:2C d g'"
        Typecast@31..33 "::"
        TypeName@33..41
          Ident@33..41 "tsvector"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..52
        Sconst@43..52 "'a | s:*'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

