crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank(' a:1 sa:2C d g'::tsvector, 'a | sa:*');"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    FuncCall@7..53
      Ident@7..14 "ts_rank"
      Ascii40@14..15 "("
      TypeCast@15..41
        AConst@15..31
          Sconst@15..31 "' a:1 sa:2C d g'"
        Typecast@31..33 "::"
        TypeName@33..41
          Ident@33..41 "tsvector"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..53
        Sconst@43..53 "'a | sa:*'"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

