crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@162.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank(' a:1 s:2 d g'::tsvector, 'a | s');"
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..48
    FuncCall@7..48
      Ident@7..14 "ts_rank"
      Ascii40@14..15 "("
      TypeCast@15..39
        AConst@15..29
          Sconst@15..29 "' a:1 s:2 d g'"
        Typecast@29..31 "::"
        TypeName@31..39
          Ident@31..39 "tsvector"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..48
        Sconst@41..48 "'a | s'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

